--- a/source/less/blocks/html-academy-logo.less
+++ b/source/less/blocks/html-academy-logo.less
@@ -26,8 +26,26 @@
   line-height: 19.2px;
   font-weight: 400;
   color: @dark-grey;
+
+  &:hover {
+    color: @green;
+  }
+
+  &:active {
+    color: @green;
+    opacity: 0.3;
+  }
 }
 
 .html-academy-logo__icon {
   color: @dark-grey2;
+
+  &:hover {
+    color: @green;
+  }
+
+  &:active {
+    color: @green;
+    opacity: 0.3;
+  }
 }
