--- a/source/less/blocks/catalog/additional-goods.less
+++ b/source/less/blocks/catalog/additional-goods.less
@@ -162,6 +162,14 @@
   min-height: 40px;
   margin-bottom: 19px;
 
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
   @media (min-width: @tablet-width) {
     width: 632px;
     min-height: 39px;
