--- a/source/less/blocks/catalog/product-button-last.less
+++ b/source/less/blocks/catalog/product-button-last.less
@@ -3,4 +3,12 @@
   background-color: @basic-grey;
   font-size: 16px;
   line-height: 20px;
+
+  &:hover {
+    background-color: @basic-grey2;
+  }
+
+  &:active {
+    color: rgba(68, 68, 68, 0.3);
+  }
 }
