--- a/source/less/blocks/catalog/product-button.less
+++ b/source/less/blocks/catalog/product-button.less
@@ -9,6 +9,14 @@
   min-height: 40px;
   margin-top: 10px;
 
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
   @media (min-width: @tablet-width) {
     width: 248px;
     min-height: 40px;
