--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -44,8 +44,25 @@
 
 .footer__logo-image {
   margin-top: 20px;
+
+  &:hover {
+    color: #3e3e3e;
+  }
+
+  &:active {
+    color: #6b6b6b;
+  }
 }
 
 .footer__social-icon {
   color: @dark-grey2;
+
+  &:hover {
+    color: @green;
+  }
+
+  &:active {
+    color: @green;
+    opacity: 0.3;
+  }
 }
