--- a/source/less/blocks/form/program-selection-button.less
+++ b/source/less/blocks/form/program-selection-button.less
@@ -6,6 +6,14 @@
   min-height: 40px;
   margin-bottom: 21px;
 
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
   @media (min-width: @tablet-width) {
     width: 282px;
     min-height: 52px;
