--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -135,6 +135,14 @@
   line-height: 18px;
   margin-top: -4px;
 
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
   @media (min-width: @tablet-width) {
     position: relative;
     font-size: 20px;
