--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,8 @@
-@import "./blocks/fonts.less";
+@import "./common/fonts.less";
 @import "./blocks/page.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/main-header.less";
-@import "./blocks/visually-hidden.less";
+@import "./common/visually-hidden.less";
 @import "./blocks/index/hero.less";
 @import "./blocks/button.less";
 @import "./blocks/map.less";
@@ -39,6 +39,6 @@
 @import "./blocks/catalog/additional-gift-wrapper.less";
 @import "./blocks/catalog/additional-goods.less";
 @import "./blocks/catalog/gift.less";
-@import "./blocks/variables.less";
+@import "./common/variables.less";
 @import "./blocks/social-list.less";
 @import "./blocks/main-container.less";
